# shake-before-make

./: .gitignore  .gitmodules  FROM  README.md  RESOLVER  Shake.key  Shakefile.hs  shake-over-make.cabal
