name:                  shake-over-make
version:               0.0.0
build-type:            Simple
cabal-version:         >= 1.22

executable shake-over-make
  default-language:    Haskell2010
  main-is:             Shakefile.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.8 && < 5
                     , basic-prelude
                     , shake
